--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Roboto:wght@300&family=Special+Elite&display=swap');
+
+#root {
+    width: 50vh;
+    height: auto;
+    padding-bottom: 50px;
+    background-color: beige;
+    font-family: Roboto;
+    font-weight: bold;
+    border: 2px solid black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Add {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+
+.Add label {
+    margin: 20px 0px;
+}
+
+.Add input {
+    width: 90%;
+}
+
+.AddDate {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    margin-top: 20px;
+}
+
+.Add button {
+    padding: 5px;
+    width: 70px;
+    margin-top: 10px;
+}
+
+.List {
+    background-color: white;
+    width: 90%;
+    min-height: 100px;
+    border: 2px solid black;
+    margin: 10px;
+}
+
+.List-Item {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+}
+
+.Todo {
+    min-width: 280px;
+    margin: 5px 30px 0px 0px;
+}
+
+.Date {
+    min-width: 65px;
+    margin: 5px 30px 0px 0px;
+}
+
+.Category {
+    min-width: 85px;
+    margin: 5px 30px 0px 0px;
+}
+
+.Button {
+    margin: 5px 5px 0px 0px;
+}
+
+.Red {
+    color: red;
+}
+
+.Search {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+#SearchField {
+    width: 50%;
+    margin-top: 3px;
+}
+
+.SearchBox {
+    display: flex;
+    margin-top: 5px;
 }
